Added correct capitals

--- a/Flashcards/task/src/index.html
+++ b/Flashcards/task/src/index.html
@@ -14,7 +14,7 @@
                 <p>Mexico</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Mexico City</p>
             </div>
         </div>
     </div>
@@ -24,7 +24,7 @@
                 <p>Papua New Guinea</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Port Moresby</p>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
                 <p>Iceland</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Reykjavík</p>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
                 <p>South Korea</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Seoul</p>
             </div>
         </div>
     </div>
@@ -54,7 +54,7 @@
                 <p>Sweden</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Stockholm</p>
             </div>
         </div>
     </div>
@@ -64,7 +64,7 @@
                 <p>Georgia</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Tbilisi</p>
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
                 <p>Honduras</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Tegucigalpa</p>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
                 <p>Tunisia</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Tunis</p>
             </div>
         </div>
     </div>
@@ -94,7 +94,7 @@
                 <p>Austria</p>
             </div>
             <div class="back">
-                <p>Answer</p>
+                <p>Vienna</p>
             </div>
         </div>
     </div>
